--- a/blocks/form.css
+++ b/blocks/form.css
@@ -6,7 +6,7 @@
 
 .form__label {
   display: block;
-  margin-bottom: 20px;
+  margin-bottom: 32px;
   font-family: 'Inter', Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -15,6 +15,7 @@
 }
 
 .form__input {
+  margin-top: 8px;
   box-sizing: border-box;
   width: 100%;
   padding: 10px;
@@ -30,7 +31,7 @@
 .form__button {
   font-size: 16px;
   font-weight: 500;
-  line-height: normal;
+  line-height: 20px;
   display: block;
   width: 100%;
   padding: 20px 0;
